<resources>
    <string name="app_name">TaxiSid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_info_course">Information de la course</string>
    <string name="title_activity_course_actuelle">Course Actuelle</string>
    <string name="title_activity_course_actuelle_depot">Course Actuelle - Dépot</string>
    <string name="modifier_statut">Modifier mon \n statut</string>
    <string name="besoin">0 besoin</string>
    <string name="obtenir_course">Choisir une course</string>
    <string name="title_activity_modifier_statut">Modifier le statut</string>
    <string name="confirmer">Confirmer</string>
    <string name="nouveau_statut">Nouveau Statut : </string>
    <string name="string_nb_personnes">Nombre de personnes :</string>
    <string name="info_recup2">Heure : </string>
    <string name="string_animaux">Animaux / grands :</string>
    <string name="string_bagage">Bagages :</string>
    <string name="bouton_recup">Client récupéré</string>
    <string name="info_depot1">Arrivée de la course :</string>
    <string name="info_depot2">Heure : </string>
    <string name="info_depot3">Distance jusqu’au lieu d’arrivée :</string>
    <string name="info_depot4">Temps restant estimé :</string>
    <string name="bouton_depot">Terminer la course</string>
    <string name="info_course_depart1">Départ</string>
    <string name="string_adresse_depart">Adresse :</string>
    <string name="info_course_depart3">Arrivée estimée dans</string>
    <string name="info_course_depart4">Ville :</string>
    <string name="info_course_depart5">Adresse :</string>
    <string name="string_heure_depart">Date et heure :</string>
    <string name="info_course_arrivee1">Arrivée</string>
    <string name="string_adresse_arrivee">Adresse :</string>
    <string name="info_course_arrivee3">Ville :</string>
    <string name="string_info_clients">Informations Client</string>
    <string name="string_num_client">Numéro :</string>
    <string name="Heure">Heure :</string>
    <string name="Date">Date :</string>
    <string name="bouton_info_course1">Refuser</string>
    <string name="bouton_info_course2">Accepter</string>
    <string name="statut">Mon Statut : </string>
    <string name="statut_occupe">Indisponible</string>
    <string name="statut_libre">Libre</string>
    <string name="statut_pause">Pause</string>
    <string name="statut_charge">Charge</string>
    <string name="statut_destination">Destination</string>
    <string name="title_activity_info_station">Information Station</string>
    <string name="title_activity_population_station">Population Station</string>
    <string name="statut_retour">Inactif</string>
    <string name="menu_home">Menu home</string>
    <string name="menu_course">Menu course</string>
    <string name="menu_message">Menu message</string>
    <string name="menu_reserv">Menu reservation</string>
    <string name="menu_localisation">Menu localisation</string>
    <string name="menu_code">Menu code</string>
    <string name="title_activity_MainActivity">Page d’accueil</string>
    <string name="title_activity_message_centrale">Messages</string>
    <string name="title_activity_bouton">bouton</string>
    <string name="title_activity_liste_code">Envoyer message</string>
    <string name="title_activity_info_reservation">Information Réservation</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_horaire_reservation">horaire_reservation</string>
    <string name="title_activity_info_course2">info_course2</string>
    <string name="title_activity_reserv_station">reserv_station</string>
    <string name="title_activity_accepter_course">accepter_course</string>
    <string name="nouvelle_course">Nouvelle course</string>
    <string name="station_nouvelle_course">Station de la course : </string>
    <string name="accepter_nouvelle_course">Accepter</string>
    <string name="refuser_nouvelle_course">Refuser</string>
    <string name="affichage_nom_taxi">Taxi :</string>
    <string name="message">Message :</string>
    <string name="aucun_message">Aucun message</string>
    <string name="radar">Radars</string>
    <string name="clients">Clients</string>
    <string name="autres">Autres</string>

</resources>
