<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.univ_tlse3.taxisid.accepter_course"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/nouvelle_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nouvelle_course"
            android:textSize="30sp"/>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@drawable/ic_action_reservation"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/station_nouvelle_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station_nouvelle_course"
            android:textSize="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/refuser_nouvelle_course"
            android:textSize="25sp"
            android:id="@+id/refuser_nouvvelle_course"
            android:gravity="center"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/accepter_nouvelle_course"
            android:textSize="25sp"
            android:id="@+id/accepter_nouvelle_course"
            android:gravity="center"
            android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>
