<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".info_course">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/feuvert" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/editText2"
                android:text="@string/info_course_depart1"
                android:textSize="25sp"
                android:gravity="center"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heure_depart"
                android:text="@string/string_heure_depart"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/tv_heure_depart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="- heure - je suis une date "
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/adresse_depart"
                android:text="@string/string_adresse_depart"
                android:textSize="20sp"
                />
            <TextView
                android:gravity="center"
                android:id="@+id/tv_adresse_depart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="- adresse départ - "
                android:textSize="20sp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/drapeau_arrivee"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/editText8"
                android:text="@string/info_course_arrivee1"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:id="@+id/tv_animaux"
                android:text="@string/string_adresse_arrivee"
                android:textSize="20sp"
                />
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:id="@+id/tv_adresse_arrivee"
                android:text="@string/info_course_arrivee3"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/client"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/string_info_clients"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/string_num_client"
                android:gravity="center"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_num_client"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=" --- num client ---"
                android:gravity="center"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.25"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bouton_info_course1"
            android:id="@+id/refuser"
            android:gravity="center"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bouton_info_course2"
            android:id="@+id/accepter"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>

