<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".liste_code"
    android:background="@color/fond_non_selectionner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_activity_bouton"
        android:layout_alignParentTop="true">

        <include layout="@layout/activity_bouton" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_activity_bouton"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent">
                    <Button
                        android:id="@+id/btn_radar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/radar"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent">
                    <Button
                        android:id="@+id/btn_clients"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/clients"/>
             </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent">
                    <Button
                        android:id="@+id/btn_autres"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/autres"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>
